--- a/FoodDelivery/src/main/resources/templates/add-restaurant.html
+++ b/FoodDelivery/src/main/resources/templates/add-restaurant.html
@@ -12,66 +12,75 @@
 
 <div th:replace="fragments/fragment :: navbar"></div>
 
-<div class="card w-100" style="max-width: 400px;">
-    <div class="card-body">
-        <form class="row g-3" th:action="@{/restaurant}" method="post" enctype="multipart/form-data">
-            <div class="col-12">
-                <p th:if="${error != null}" th:text="${error}" class="alert alert-danger" role="alert"></p>
+<div class="row g-0 vh-100 bg-light">
+    <img class="col-md-6 bg-image" th:src="@{/images/webpage/registration-form.jpg}" src="/images/webpage/registration-form.jpg" alt="picture"></img>
+    <div class="col-md-6 d-flex align-items-center justify-content-center">
+        <div class="px-5">
+            <div class="text-center mb-5">
+                <p id="logo-text">byte<span class="yellow-dot">.</span></p>
+                <h2 class="registration-header">
+                    Savor the Flavor, a <span>New Restaurant</span> is Born<span class="yellow-dot">.</span>
+                </h2>
             </div>
-            <!-- Restaurant Name Input -->
-            <div class="col-12">
-                <label for="inputName" class="form-label">Name</label>
-                <input type="text" class="form-control mb-2" id="inputName" name="restaurantName">
-            </div>
+            <form class="row g-3" th:action="@{/restaurant}" method="post" enctype="multipart/form-data">
+                <div class="col-12">
+                    <p th:if="${error != null}" th:text="${error}" class="alert alert-danger" role="alert"></p>
+                </div>
+                <!-- Restaurant Name Input -->
+                <div class="col-12">
+                    <label for="inputName" class="form-label">Name</label>
+                    <input type="text" class="form-control mb-2" id="inputName" name="restaurantName" required>
+                </div>
 
-            <!-- Contact Number Input -->
-            <div class="col-12">
-                <label for="inputContactNumber" class="form-label">Contact Number</label>
-                <input type="text" class="form-control mb-2" id="inputContactNumber" name="contactNumber">
-            </div>
+                <!-- Contact Number Input -->
+                <div class="col-12">
+                    <label for="inputContactNumber" class="form-label">Contact Number</label>
+                    <input type="text" class="form-control mb-2" id="inputContactNumber" name="contactNumber">
+                </div>
 
 
-            <!-- Street Input -->
-            <div class="col-12">
-                <label for="inputStreet" class="form-label">Street</label>
-                <input type="text" class="form-control mb-2" id="inputStreet" name="street">
-            </div>
+                <!-- Street Input -->
+                <div class="col-12">
+                    <label for="inputStreet" class="form-label">Street</label>
+                    <input type="text" class="form-control mb-2" id="inputStreet" name="street" required>
+                </div>
 
-            <!-- City Input -->
-            <div class="col-12">
-                <label for="inputCity" class="form-label">City</label>
-                <input type="text" class="form-control mb-2" id="inputCity" name="city">
-            </div>
+                <!-- City Input -->
+                <div class="col-12">
+                    <label for="inputCity" class="form-label">City</label>
+                    <input type="text" class="form-control mb-2" id="inputCity" name="city" required>
+                </div>
 
-            <!-- Province Input -->
-            <div class="col-12">
-                <label for="inputProvince" class="form-label">Province</label>
-                <input type="text" class="form-control mb-2" id="inputProvince" name="province">
-            </div>
+                <!-- Province Input -->
+                <div class="col-12">
+                    <label for="inputProvince" class="form-label">Province</label>
+                    <input type="text" class="form-control mb-2" id="inputProvince" name="province" required>
+                </div>
 
-            <!-- Country Input -->
-            <div class="col-12">
-                <label for="inputCountry" class="form-label">Country</label>
-                <input type="text" class="form-control mb-2" id="inputCountry" name="country">
-            </div>
+                <!-- Country Input -->
+                <div class="col-12">
+                    <label for="inputCountry" class="form-label">Country</label>
+                    <input type="text" class="form-control mb-2" id="inputCountry" name="country" required>
+                </div>
 
-            <!-- Postal Code Input -->
-            <div class="col-12">
-                <label for="inputPostalCode" class="form-label">Postal Code</label>
-                <input type="text" class="form-control mb-2" id="inputPostalCode" name="postalCode">
-            </div>
+                <!-- Postal Code Input -->
+                <div class="col-12">
+                    <label for="inputPostalCode" class="form-label">Postal Code</label>
+                    <input type="text" class="form-control mb-2" id="inputPostalCode" name="postalCode" required>
+                </div>
 
-            <!-- Picture Input -->
-            <div class="col-12">
-                <label for="inputPicture" class="form-label">Picture:</label>
-                <input type="file" class="form-control mb-2" id="inputPicture" name="picture" required />
-            </div>
+                <!-- Picture Input -->
+                <div class="col-12">
+                    <label for="inputPicture" class="form-label">Picture:</label>
+                    <input type="file" class="form-control mb-2" id="inputPicture" name="picture" required />
+                </div>
 
-            <!-- Submit Button -->
-            <div class="col-12">
-                <button type="submit" class="btn btn-primary w-100 mb-2">Submit</button>
-            </div>
-        </form>
+                <!-- Submit Button -->
+                <div class="col-12">
+                    <button type="submit" class="btn btn-success w-100 my-2">Submit</button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
