--- a/FoodDelivery/src/main/resources/templates/category-page.html
+++ b/FoodDelivery/src/main/resources/templates/category-page.html
@@ -12,16 +12,19 @@
 
 <div th:replace="fragments/fragment :: navbar"></div>
 
-<div class="row row-cols-1 row-cols-md-3 g-4" th:if="${isLoggedIn}">
+
+
+<div class="row row-cols-1 row-cols-md-4 g-4 bg-light">
     <div th:each="restaurant : ${restaurants}" class="col">
         <div class="card h-100">
             <img th:src="@{/{picturePath}(picturePath=${restaurant.getPicturePath()})}" class="card-img-top" alt="Restaurant Image">
             <div class="card-body">
-                <!-- Display Restaurant Name -->
-                <h5 class="card-title" th:text="${restaurant.getName()}">Restaurant Name</h5>
-                <!-- Display Restaurant Rating -->
-                <p class="card-rating" th:text="${'Rating: ' + restaurant.getRating()}">Rating</p>
-
+                <div class="d-flex justify-content-between align-items-center mb-2">
+                    <h5 class="card-title" th:text="${restaurant.getName()}">Restaurant Name</h5>
+                    <p class="card-rating d-flex align-items-center border border-success rounded px-1 py-1">
+                        <span class="font-weight-bold" th:text="${'★ '+#numbers.formatDecimal(restaurant.getRating(), 1, 'COMMA', 2, 'POINT')}">Rating</span>
+                    </p>
+                </div>
                 <div class="card-text" th:if="${isLoggedIn}">
                     <a th:href="@{/order/{Name}(Name=${restaurant.getName()})}" class="btn btn-custom-color w-100 mb-2">Order</a>
                 </div>
