--- a/FoodDelivery/src/main/resources/templates/edit-menuitem.html
+++ b/FoodDelivery/src/main/resources/templates/edit-menuitem.html
@@ -12,43 +12,50 @@
 
 <div th:replace="fragments/fragment :: navbar"></div>
 
-<div class="card w-100" style="max-width: 400px;">
-    <div class="card-body">
-        <form class="row g-3" th:action="@{/menu-items/{restaurantName}/edit-menuitem/{menuItemId}(restaurantName=${restaurant.getName()},menuItemId=${menuItem.getId()})}" method="post">
-            <div class="col-12">
-                <p th:if="${error != null}" th:text="${error}" class="alert alert-danger" role="alert"></p>
+<div class="row g-0 vh-100 bg-light">
+    <img class="col-md-6 bg-image" th:src="@{/images/webpage/registration-form.jpg}" src="/images/webpage/registration-form.jpg" alt="picture"></img>
+    <div class="col-md-6 d-flex align-items-center justify-content-center">
+        <div class="px-5">
+            <div class="text-center mb-5">
+                <p id="logo-text">byte<span class="yellow-dot">.</span></p>
+                <h2 class="registration-header">
+                    Adjusting the Seasoning, <span>Menu Item Tweaked</span> to Perfection<span class="yellow-dot">.</span>
+                </h2>
             </div>
-            <!-- Restaurant Name Input -->
-            <div class="col-12">
-                <label for="inputName" class="form-label">Name</label>
-                <input type="text" class="form-control mb-2" id="inputName" th:value="${menuItem.getName()}" name="name">
-            </div>
+            <form class="row g-3" th:action="@{/menu-items/{restaurantName}/edit-menuitem/{menuItemId}(restaurantName=${restaurant.getName()},menuItemId=${menuItem.getId()})}" method="post">
+                <div class="col-12">
+                    <p th:if="${error != null}" th:text="${error}" class="alert alert-danger" role="alert"></p>
+                </div>
+                <!-- Restaurant Name Input -->
+                <div class="col-12">
+                    <label for="inputName" class="form-label">Name</label>
+                    <input type="text" class="form-control mb-2" id="inputName" th:value="${menuItem.getName()}" name="name">
+                </div>
 
 
-            <div class="col-12">
-                <label for="Description" class="form-label">Description</label>
-                <input type="text" class="form-control mb-2" id="Description" th:value="${menuItem.getDescription()}" name="description">
-            </div>
+                <div class="col-12">
+                    <label for="Description" class="form-label">Description</label>
+                    <input type="text" class="form-control mb-2" id="Description" th:value="${menuItem.getDescription()}" name="description">
+                </div>
 
-            <div class="col-12">
-                <label for="Price" class="form-label">Price</label>
-                <input type="text" class="form-control mb-2" id="Price" th:value="${menuItem.getPrice()}" name="price">
-            </div>
+                <div class="col-12">
+                    <label for="Price" class="form-label">Price</label>
+                    <input type="text" class="form-control mb-2" id="Price" th:value="${menuItem.getPrice()}" name="price">
+                </div>
 
-            <div class="col-12">
-                <label for="Category" class="form-label">Category</label>
-                <input type="text" class="form-control mb-2" id="Category" th:value="${menuItem.getCategory()}" name="category">
-            </div>
+                <div class="col-12">
+                    <label for="Category" class="form-label">Category</label>
+                    <input type="text" class="form-control mb-2" id="Category" th:value="${menuItem.getCategory()}" name="category">
+                </div>
 
-            <input type="hidden" class="form-control mb-2" id="inputImage" th:value="${menuItem.getImageURL()}" name="imageURL">
+                <input type="hidden" class="form-control mb-2" id="inputImage" th:value="${menuItem.getImageURL()}" name="imageURL">
 
-            <!-- Submit Button -->
-            <div class="col-12">
-                <button type="submit" class="btn btn-primary w-100 mb-2">Submit</button>
-            </div>
-        </form>
-
-
+                <!-- Submit Button -->
+                <div class="col-12">
+                    <button type="submit" class="btn btn-success w-100 my-2">Submit</button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
