--- a/FoodDelivery/src/main/resources/templates/fragments/fragment.html
+++ b/FoodDelivery/src/main/resources/templates/fragments/fragment.html
@@ -8,14 +8,20 @@
 <body>
 <div th:fragment="navbar">
     <!-- Your navigation bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <a class="navbar-brand" th:href="@{/}" id="logo-text" style="font-size: 28px" >
             byte<span class="yellow-dot">.</span>
         </a>
 
+        <div class="navbar-nav nav-item">
+            <a class="navigation-link btn " th:href="@{/}">Home</a>
+        </div>
+
         <div class="navbar-nav mx-auto" th:if="${isLoggedIn}">
             <span class="navigation-address" th:text="${user.getAddress().getCity() + ', ' + user.getAddress().getStreet()}"></span>
         </div>
+
+
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -36,7 +42,7 @@
                 <!-- Logged in User Options -->
                 <li class="nav-item" th:if="${isLoggedIn}">
                     <!-- Profile Icon -->
-                    <a class="md-2 navigation-address" th:href="@{/profile/{username}(username=${user.getUsername()})}" th:text="${user.getUsername()}"></a>
+                    <a class="md-2 btn navigation-address" th:href="@{/profile/{username}(username=${user.getUsername()})}" th:text="${user.getUsername()}"></a>
                 </li>
                 <li class="nav-item" th:if="${isLoggedIn}">
                     <a href="/logout" class="btn btn-warning">Logout</a>
