--- a/FoodDelivery/src/main/resources/templates/order-history.html
+++ b/FoodDelivery/src/main/resources/templates/order-history.html
@@ -12,41 +12,38 @@
 
 <div th:replace="fragments/fragment :: navbar"></div>
 
-<div class="row row-cols-1 row-cols-md-3 g-4">
+<div class="row row-cols-1 row-cols-md-4 g-4 bg-light">
     <div th:each="order : ${orders}" class="col">
         <div class="card h-100">
-            <img th:src="@{/{picturePath}(picturePath=${order.getRestaurant().getPicturePath()})}" class="card-img-top" alt="Menu Item Image">
+            <div class="card-header">
+                <h5 class="card-title h2 font-weight-bold " th:text="${order.getOrderDate()}">Order Date</h5>
+            </div>
+            <img th:src="@{/{picturePath}(picturePath=${order.getRestaurant().getPicturePath()})}" class="card-img-top" alt="Restaurant Image">
             <div class="card-body">
-                <h5 class="card-title" th:text="${'Date of order: ' + order.getOrderDate()}"></h5>
-                <h5 class="card-title" th:text="${'Restaurant: ' + order.getRestaurant().getName()}"></h5>
-
-                <ul th:each="orderItem : ${order.getOrderItems()}" >
-                    <li th:text="${orderItem.getMenuItem().getName()+'  Price: ' + orderItem.getMenuItem().getPrice() + ' x' +orderItem.getQuantity()}"></li>
+                <h5 class="card-title font-weight-bold h3" th:text="${order.getRestaurant().getName()}">Restaurant Name</h5>
+                <p class="mt-2 font-weight-bold">
+                    Total amount:
+                    <span class="card-rating" th:text="${'€'+#numbers.formatDecimal(order.getTotalAmount(), 1, 'COMMA', 2, 'POINT')}"></span>
+                </p>
+                <p th:text="${'Time of delivery: ' + order.getScheduledDeliveryTime()}" class="text-muted font-weight-bold ">Delivery Time</p>
+                <ul class="list-group list-group-flush">
+                    <li th:each="orderItem : ${order.getOrderItems()}" class="list-group-item"
+                        th:text="${orderItem.getQuantity() + 'x ' + orderItem.getMenuItem().getName()}">Menu Item</li>
                 </ul>
-
-                <p class="card-rating" th:text="${'Tiem of delivery: ' + order.getScheduledDeliveryTime()}">Price</p>
-                <p class="card-text" th:text="${'Total amount: '+order.getTotalAmount()}">Description</p>
-
+            </div>
+            <div class="card-footer bg-white">
                 <form th:action="@{/order/order-rating/{orderId}(orderId=${order.getId()})}" method="post">
-                    <div class="">
+                    <div class="mb-2">
                         <label for="rating" class="form-label">Rating:</label>
-                        <input type="text" class="form-control mb-2" id="rating" th:value="${order.getRating()}" name="rating">
+                        <input type="number" class="form-control" id="rating" th:value="${order.getRating()}" name="rating" min="1" max="5">
                     </div>
-                    <div class="">
+                    <div class="mb-2">
                         <label for="comment" class="form-label">Comment:</label>
-                        <input type="text" class="form-control mb-2" id="comment" th:value="${order.getComment()}" name="comment">
+                        <textarea class="form-control" id="comment" name="comment" th:text="${order.getComment()}"></textarea>
                     </div>
-                    <div class="">
-                        <input type="hidden" class="form-control mb-2" id="restaurantName" th:value="${order.getRestaurant().getName()}" name="restaurantName">
-                    </div>
-
-                    <div>
-                        <button type="submit" id="signup-btn" class="btn w-100 mb-2">SIGN IN</button>
-                    </div>
+                    <input type="hidden" id="restaurantName" th:value="${order.getRestaurant().getName()}" name="restaurantName">
+                    <button type="submit" class="btn btn-primary w-100">Submit Rating</button>
                 </form>
-
-
-
             </div>
         </div>
     </div>
