--- a/FoodDelivery/src/main/resources/templates/order-page.html
+++ b/FoodDelivery/src/main/resources/templates/order-page.html
@@ -10,37 +10,62 @@
 </head>
 <body>
 
-<div th:replace="fragments/fragment :: navbar"></div>
+    <div th:replace="fragments/fragment :: navbar"></div>
 
-    <div id="orderBasket">
-        <h3>Your Basket</h3>
-        <ul id="basketItems">
-            <!-- Basket items will be added here -->
-        </ul>
-        <p>Total: <span id="basketTotal"></span></p>
+    <div class="position-relative banner mb-1 bg-light">
+        <img th:src="@{/{picturePath}(picturePath=${restaurant.getPicturePath()})}" alt="Descriptive Text for Image" class="img-fluid" style="filter: brightness(50%)">
+        <div class="position-absolute banner-text">
+            <h2 class="text-white font-weight-bold" th:text="${restaurant.getName()}">Title Goes Here</h2>
+        </div>
     </div>
 
-
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div th:each="menuItem : ${menu}" class="col">
-            <div class="card h-100">
-                <img th:src="@{/{picturePath}(picturePath=${menuItem.getImageURL()})}" class="card-img-top" alt="Menu Item Image">
-                <div class="card-body">
-                    <h5 class="card-title" th:text="${menuItem.getName()}">Menu Item Name</h5>
-                    <p class="card-rating" th:text="${'Price: ' + menuItem.getPrice()}">Price</p>
-                    <p class="card-text" th:text="${menuItem.getDescription()}">Description</p>
-                    <!-- Update this button -->
-                    <button type="button"
-                            class="btn btn-custom-color w-100 mb-2"
-                            th:data-menu-item-id="${menuItem.id}"
-                            th:data-restaurant-name="${restaurant.name}"
-                            onclick="addToBasket(this)">Add to Basket</button>
-
-
+    <div class="container-fluid bg-light">
+        <div class="row">
+            <div class="col-md-9">
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div th:each="menuItem : ${menu}" class="col">
+                        <div class="card h-100 d-flex flex-column">
+                            <img th:src="@{/{picturePath}(picturePath=${menuItem.getImageURL()})}" class="card-img-top" alt="Menu Item Image">
+                            <div class="card-body d-flex flex-column">
+                                <div class="d-flex justify-content-between align-items-center mb-2">
+                                    <h5 class="card-title" th:text="${menuItem.getName()}">Menu Item Name</h5>
+                                    <p class="card-rating d-flex align-items-center">
+                                        <span class="font-weight-bold" th:text="${'€'+#numbers.formatDecimal(menuItem.getPrice(), 1, 'COMMA', 2, 'POINT')}"></span>
+                                    </p>
+                                </div>
+                                <p class="card-address text-muted font-weight-bold mb-3" th:text="${menuItem.getDescription()}">Description</p>
+                                <div class="mt-auto">
+                                    <button type="button"
+                                            class="btn btn-custom-color w-100"
+                                            th:data-menu-item-id="${menuItem.id}"
+                                            th:data-restaurant-name="${restaurant.name}"
+                                            onclick="addToBasket(this)">Add to Basket
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div id="orderBasket" class="sticky-top mt-1 mx-auto">
+                    <h3 class="text-center font-weight-bold">Your Order</h3>
+                    <hr> <!-- Divider line after the header -->
+                    <div class="list-group" id="basketItems">
+                        <!-- Basket items will be added here dynamically with JavaScript -->
+                    </div>
+                    <hr> <!-- Divider line before the total -->
+                    <div class="d-flex justify-content-between align-items-center">
+                        <strong class="total-text">Total:</strong>
+                        <span class="total-amount font-weight-bold card-rating" id="basketTotal"></span>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <script>
@@ -102,15 +127,28 @@
                 var itemTotal = itemPrice * itemQuantity;
                 total += itemTotal;
 
-                var newItem = $('<li>')
-                    .text(itemName + ' - Quantity: ' + itemQuantity + ' - Price: ' + itemTotal.toFixed(2) + '€');
+                var newItem = $('<div>')
+                    .addClass('list-group-item d-flex justify-content-between align-items-center')
+                    .css({'font-weight': 'bold', 'font-size': '1rem'}); // Smaller and bolder text
 
+                // Quantity and Name
+                var itemNameQuantity = $('<span>')
+                    .text(itemQuantity + 'x ' + itemName)
+                    .css({'flex-grow': '1'}); // Allows the name to fill the available space
+
+                // Price
+                var itemPriceTag = $('<span>')
+                    .addClass('card-rating mx-1')
+                    .text('€' + itemTotal.toFixed(2));
+
+                // Remove button
                 var removeButton = $('<button>')
-                    .text('Remove')
-                    .addClass('btn btn-danger btn-sm mx-2')
+                    .text('X')
+                    .addClass('btn btn-danger rounded-circle')
                     .click(function() { removeItemFromBasket(item.menuItemId); });
 
-                newItem.append(removeButton);
+                // Append all parts to the newItem container
+                newItem.append(itemNameQuantity).append(itemPriceTag).append(removeButton);
                 $('#basketItems').append(newItem);
             });
 
@@ -123,7 +161,7 @@
                     var confirmButton = $('<button>')
                         .attr('id', 'confirmOrderButton')
                         .text('Confirm Order')
-                        .addClass('btn btn-success my-2')
+                        .addClass('btn btn-success my-2 w-100')
                         .click(confirmOrder);
                     $('#orderBasket').append(confirmButton);
                 }
