--- a/FoodDelivery/src/main/resources/templates/registration-form.html
+++ b/FoodDelivery/src/main/resources/templates/registration-form.html
@@ -13,8 +13,9 @@
 
 </head>
 <body class="d-flex justify-content-center align-items-center vh-100">
-    <div class="row g-0 vh-100">
-        <img class="col-md-6 bg-image" th:src="@{/images/webpage/registration-form.jpg}" src="/images/webpage/registration-form.jpg" alt="picture">        <div class="col-md-6 d-flex align-items-center justify-content-center">
+    <div class="row g-0 vh-100 bg-light">
+        <img class="col-md-6 bg-image" th:src="@{/images/webpage/registration-form.jpg}" src="/images/webpage/registration-form.jpg" alt="picture">
+        <div class="col-md-6 d-flex align-items-center justify-content-center">
             <div class="px-5">
                 <div class="text-center mb-5">
                     <p id="logo-text">byte<span class="yellow-dot">.</span></p>
@@ -60,7 +61,7 @@
 
                     <!-- Submit Button -->
                     <div class="col-12">
-                        <button type="submit" id="signup-btn" class="btn w-100 mb-2">SIGN UP</button>
+                        <button type="submit" id="signup-btn" class="btn w-100 my-2">SIGN UP</button>
                     </div>
 
                     <!-- Login Link -->
