--- a/FoodDelivery/src/main/resources/templates/restaurant-info.html
+++ b/FoodDelivery/src/main/resources/templates/restaurant-info.html
@@ -12,14 +12,44 @@
 
 <div th:replace="fragments/fragment :: navbar"></div>
 
-<div class="container-fluid bg-light">
+<div class="container-fluid bg-light" th:if="orders">
+    <div class="row">
+        <div class="col">
+            <h3 class="text-center mt-4 mb-4">New Orders</h3>
+        </div>
+    </div>
+    <div class="row row-cols-1 row-cols-md-5 g-4 bg-light">
+        <div th:each="order : ${orders}" class="col">
+            <div class="card h-100">
+                <div class="card-header">
+                    <h5 class="card-title" th:text="${order.getId()}">Order ID</h5>
+                </div>
+                <div class="card-body">
+                    <ul class="list-group list-group-flush mb-3">
+                        <li class="list-group-item font-weight-bold" th:each="item : ${order.getOrderItems()}" th:text="${item.getQuantity() +'x '+item.getMenuItem().getName()}">Menu Item Name</li>
+                    </ul>
+                    <div class="row mb-2">
+                        <div class="col card-rating font-weight-bold" th:text="${'€'+#numbers.formatDecimal(order.getTotalAmount(), 1, 'COMMA', 2, 'POINT')}">Price</div>
+                    </div>
+                    <div class="card-footer ">
+                        <form th:action="@{/restaurant/complete-order/{orderId}/{restaurantName}(orderId=${order.getId()},restaurantName=${restaurant.getName()})}" method="post">
+                            <button type="submit" class="btn btn-success w-100">Confirm Order</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid bg-light" th:if="CompletedOrders">
     <div class="row">
         <div class="col">
             <h3 class="text-center mt-4 mb-4">Order Reviews</h3>
         </div>
     </div>
     <div class="row row-cols-1 row-cols-md-5 g-4 bg-light">
-        <div th:each="order : ${orders}" class="col">
+        <div th:each="order : ${CompletedOrders}" class="col">
             <div class="card h-100">
                 <div class="card-header">
                     <h5 class="card-title" th:text="${order.getId()}">Order ID</h5>
